<resources>
    <string name="app_name">АвтоНалоги (Беларусь)</string>
    <string name="email">AnatoliOgurtsov@gmail.com</string>
    <string name="author">Анатолий Огурцов</string>
    <string name="about_app">О приложении</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="share_app">Поделиться</string>
    <string name="euroRate">Курс евро: </string>
    <string name="dollarRate">Курс доллара: </string>
    <string name="labelIconName">Транспортный налог</string>
    <string name="titleDorSbor">Транспортный налог 2021</string>
    <string name="titleUtilSbor">Утилизационный сбор</string>
    <string name="titleUtilSbor2021">Утилизационный сбор 2021</string>
    <string name="titleStrahovka">Обязательное страхование</string>
    <string name="titleStrahovkaShot">Cтрахование</string>
    <string name="SETTING">Настройки</string>
    <string name="changeTHeme">Тема</string>
    <string name="showCurrencyRate">Показывать курсы валют</string>
    <string name="water">водяная</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_button_fiz">ФИЗИЧЕСКОЕ ЛИЦО</string>
    <string name="title_button_yur">ЮРИДИЧЕСКОЕ ЛИЦО</string>
    <string name="title_button_before_10_years">МЛАДШЕ 10 ЛЕТ</string>
    <string name="title_button__10_years_and_oldest">10 ЛЕТ И СТАРШЕ</string>
    <string name="switch_pensioner">ИНВАЛИД ПЕРВОЙ ИЛИ ВТОРОЙ ГРУППЫ, \nВЕТЕРАН ВЕЛИКОЙ ОТЕЧЕСТВЕННОЙ ВОЙНЫ, \nПЕНСИОНЕР</string>
    <string name="switch_invalid3group">ИНВАЛИД ТРЕТЬЕЙ ГРУППЫ</string>
    <string name="electro_2025">освобождение от уплаты до 31 декабря 2025 года</string>
    <string name="title_button_legk_car">ЛЕГКОВОЙ АВТОМОБИЛЬ</string>
    <string name="title_button_gruz_car">ГРУЗОВОЙ АВТОМОБИЛЬ, АВТОМОБИЛЬ-ТЯГАЧ, СЕДЕЛЬНЫЙ ТЯГАЧ, ГРУЗОПАССАЖИРСКИЙ АВТОМОБИЛЬ</string>
    <string name="title_button_gruz_car_us">ГРУЗОВОЙ АВТОМОБИЛЬ</string>
    <string name="title_button_bus">АВТОБУС</string>
    <string name="title_button_pricep">ПРИЦЕП</string>
    <string name="title_button_motocycle">МОТОЦИКЛ</string>
    <string name="title_button_less_1_5t">имеющий разрешенную максимальную массу НЕ БОЛЕЕ 1,5 ТОНН</string>
    <string name="title_button_in_1_5_2t">имеющий разрешенную максимальную массу БОЛЕЕ 1,5 ТОНН, НО НЕ БОЛЕЕ 2 ТОНН</string>
    <string name="title_button_in_2_3t">имеющий разрешенную максимальную массу БОЛЕЕ 2 ТОНН, НО НЕ БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_more_3t">имеющий разрешенную максимальную массу БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_less_1_5t21">имеющий разрешенную максимальную массу НЕ БОЛЕЕ 1,5 ТОНН</string>
    <string name="title_button_in_1_5_1_75t21">имеющий разрешенную максимальную массу БОЛЕЕ 1,5 ТОНН, НО НЕ БОЛЕЕ 1,75 ТОНН</string>
    <string name="title_button_in_1_75_2t21">имеющий разрешенную максимальную массу БОЛЕЕ 1,75 ТОНН, НО НЕ БОЛЕЕ 2 ТОНН</string>
    <string name="title_button_in_2_2_25t21">имеющий разрешенную максимальную массу БОЛЕЕ 2 ТОНН, НО НЕ БОЛЕЕ 2,25 ТОНН</string>
    <string name="title_button_in_1_25_2_5t21">имеющий разрешенную максимальную массу БОЛЕЕ 2,25 ТОНН, НО НЕ БОЛЕЕ 2,5 ТОНН</string>
    <string name="title_button_in_2_5_3t21">имеющий разрешенную максимальную массу БОЛЕЕ 2,5 ТОНН, НО НЕ БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_more_3t21">имеющий разрешенную максимальную массу БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_electro">приводимый в движение исключительно электрическим двигателем</string>
    <string name="title_button_less_1t21">имеющий разрешенную максимальную массу НЕ БОЛЕЕ 1 ТОННЫ</string>
    <string name="title_button_in_1_2t21">имеющий разрешенную максимальную массу БОЛЕЕ 1 ТОННЫ, НО НЕ БОЛЕЕ 2 ТОНН</string>
    <string name="title_button_in_2_3t21">имеющий разрешенную максимальную массу БОЛЕЕ 2 ТОНН, НО НЕ БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_more_3t21yur">имеющий разрешенную максимальную массу БОЛЕЕ 3 ТОНН</string>
    <string name="title_button_less_2_5t">имеющий разрешенную максимальную массу НЕ БОЛЕЕ 2,5 ТОНН</string>
    <string name="title_button_in_2_5_3_5t">имеющий разрешенную максимальную массу БОЛЕЕ 2,5 ТОНН, НО НЕ БОЛЕЕ 3,5 ТОНН</string>
    <string name="title_button_in_3_5_12t">имеющий разрешенную максимальную массу БОЛЕЕ 3,5 ТОНН, НО НЕ БОЛЕЕ 12 ТОНН</string>
    <string name="title_button_more_12t">имеющий разрешенную максимальную массу БОЛЕЕ 12 ТОНН</string>
    <string name="title_button_semi_trailer">СЕДЕЛЬНЫЙ ТЯГАЧ</string>
    <string name="title_button_less20">НЕ БОЛЕЕ 20 ПОСАДОЧНЫХ МЕСТ</string>
    <string name="title_button_in_21_40">БОЛЕЕ 20, НО НЕ БОЛЕЕ 40 ПОСАДОЧНЫХ МЕСТ</string>
    <string name="title_button_more_40">БОЛЕЕ 40 ПОСАДОЧНЫХ МЕСТ</string>
    <string name="title_button_less_0_75">имеющий разрешенную максимальную массу НЕ БОЛЕЕ 750 КИЛОГРАММ</string>
    <string name="title_button_more_0_75">имеющий разрешенную максимальную массу БОЛЕЕ 750 КИЛОГРАММ</string>
    <string name="title_button_dacha">ПРИЦЕП-ДАЧА</string>
    <string name="title_button_before_3_years">ДО 3 ЛЕТ</string>
    <string name="title_button_in_3_7_years">3..7 ЛЕТ</string>
    <string name="title_button_7_years_and_oldest">СТАРШЕ 7 ЛЕТ</string>
    <string name="title_button_dumpTruck">САМОСВАЛ</string>
    <string name="switch_gibrid_text">С ГИБРИДНОЙ СИЛОВОЙ УСТАНОВКОЙ РАБОЧИМ ОБЪЕМОМ:</string>
    <string name="less_1000">НЕ БОЛЕЕ 1000 куб. см.</string>
    <string name="in_1000_2000">СВЫШЕ 1000, НО НЕ БОЛЕЕ 2000 куб. см.</string>
    <string name="in_2000_3000">СВЫШЕ 2000, НО НЕ БОЛЕЕ 3000 куб. см.</string>
    <string name="in_3000_3500">СВЫШЕ 3000, НЕ НЕ БОЛЕЕ 3500 куб. см.</string>
    <string name="more_3500">СВЫШЕ 3500 куб. см.</string>
    <string name="title_button_legk_electro_us">п.1. С электродвигателями, за исключением транспортных
        средств с гибридной силовой установкой и транспортных средств, указанных в пунктах 3 и 4</string>
    <string name="title_button_legk_gibrid_us">п.2. С рабочим объемом двигателя, в том числе транспортные средства
        с гибридной силовой установкой, за исключением транспортных средств, указанных в пунктах 3 и 4:</string>
    <string name="title_button_legk_fiz_us">п.3. Ввозимые (ввезенные) физическими лицами для личного пользования, вне зависимости
        от рабочего объема двигателя, за исключением транспортных средств, указанных в пункте 4</string>
    <string name="title_button_legk_ees_us">п.4. Ввозимые (ввезенные) с территорий государств – членов Евразийского экономического
        союза, вне зависимости от рабочего объема двигателя, за исключением транспортных средств, находящихся под таможенным контролем</string>
    <string name="title_button_less_2_5t_us">имеющий полную массу НЕ БОЛЕЕ 2,5 ТОНН</string>
    <string name="title_button_in_2_5_3_5t_us">имеющий полную массу БОЛЕЕ 2,5 ТОНН, НО НЕ БОЛЕЕ 3,5 ТОНН</string>
    <string name="title_button_in_3_5_5t_us">имеющий полную массу БОЛЕЕ 3,5 ТОНН, НО НЕ БОЛЕЕ 5 ТОНН</string>
    <string name="title_button_in_5_8t_us">имеющий полную массу БОЛЕЕ 5 ТОНН, НО НЕ БОЛЕЕ 8 ТОНН</string>
    <string name="title_button_in_8_12t_us">имеющий полную массу БОЛЕЕ 8 ТОНН, НО НЕ БОЛЕЕ 12 ТОНН</string>
    <string name="title_button_in_12_20t_us">имеющий полную массу БОЛЕЕ 12 ТОНН, НО НЕ БОЛЕЕ 20 ТОНН</string>
    <string name="title_button_in_20_30t_us">имеющий полную массу БОЛЕЕ 20 ТОНН, НО НЕ БОЛЕЕ 30 ТОНН</string>
    <string name="title_button_in_30_50t_us">имеющий полную массу БОЛЕЕ 30 ТОНН, НО НЕ БОЛЕЕ 50 ТОНН</string>
    <string name="title_button_bus_motor_less_2500">с рабочим объемом двигателя НЕ БОЛЕЕ 2500 куб. см.</string>
    <string name="title_button_bus_motor_in_2500_5000">с рабочим объемом двигателя СВЫШЕ 2500, НО НЕ БОЛЕЕ 5000 куб. см.</string>
    <string name="title_button_bus_motor_in_5000_10000">с рабочим объемом двигателя СВЫШЕ 5000, НО НЕ БОЛЕЕ 10000 куб. см.</string>
    <string name="title_button_bus_motor_more_10000">с рабочим объемом двигателя СВЫШЕ 10000 куб. см.</string>
    <string name="title_switchmaterial_bus">С ЭЛЕКТРОДВИГАТЕЛЯМИ</string>
    <string name="title_button_in_50_80t_us">имеющий полную массу БОЛЕЕ 50 ТОНН, НО НЕ БОЛЕЕ 80 ТОНН</string>
    <string name="title_button_in_80_350t_us">имеющий полную массу БОЛЕЕ 80 ТОНН, НО НЕ БОЛЕЕ 350 ТОНН</string>
    <string name="title_button_more_350t_us">имеющий полную массу БОЛЕЕ 350 ТОНН</string>
    <string name="title_button_pricep_more10t_us">ПРИЦЕП, имеющий полную массу СВЫШЕ 10 ТОНН</string>
    <string name="title_button_half_pricep_more10t_us">ПОЛУПРИЦЕП, имеющий полную массу СВЫШЕ 10 ТОНН</string>
    <string name="title_button_location">НАСЕЛЕННЫЙ ПУНКТ</string>
    <string name="location">г.Минск и Минский район</string>
    <string name="title_button_legk_car_russia">ЛЕГКОВЫЕ АВТОМОБИЛИ ВАЗ, ЗАЗ, Москвич, АЗЛК, ИЖ, ГАЗ, ЛуАЗ, УАЗ</string>
    <string name="title_button_legk_car_not_russia">ЛЕГКОВЫЕ АВТОМОБИЛИ, включая микроавтобусы, с числом мест для сидения до 8 включительно (не считая места водителя), за исключением автомобилей ВАЗ, ЗАЗ, Москвич, АЗЛК, ИЖ, ГАЗ, ЛуАЗ, УАЗ</string>
    <string name="title_button_electro_gibrid_strahovka">ЭЛЕКТРОМОБИЛИ И ГИБРИДНЫЕ АВТОМОБИЛИ</string>
    <string name="title_button_legk_car_pricep">ПРИЦЕПЫ К ЛЕГКОВЫМ АВТОМОБИЛЯМ</string>
    <string name="title_button_gruz_car_strahovka">ГРУЗОВЫЕ И ГРУЗОПАССАЖИРСКИЕ АВТОМОБИЛИ</string>
    <string name="title_button_tractor">КОЛЕСНЫЕ ТРАКТОРЫ и ДОРОЖНЫЕ МАШИНЫ</string>
    <string name="title_button_gruz_car_pricep">ПРИЦЕПЫ И ПОЛУПРИЦЕПЫ к грузовым автомобилям и тракторам</string>
    <string name="title_button_moto">МОТОКОЛЯСКИ, МОТОЦИКЛЫ, МОТОРОЛЛЕРЫ</string>
    <string name="title_button_bus_strahovka">АВТОБУСЫ</string>
    <string name="title_button_less1200_strahovka">с рабочим объемом двигателя ДО 1200 куб. см. включительно</string>
    <string name="title_button_in_1200_1800_strahovka">с рабочим объемом двигателя СВЫШЕ 1200 куб. см. ДО 1800 куб. см. включительно</string>
    <string name="title_button_in_1800_2500_strahovka">с рабочим объемом двигателя СВЫШЕ 1800 куб. см. ДО 2500 куб. см. включительно</string>
    <string name="title_button_in_2500_3500_strahovka">с рабочим объемом двигателя СВЫШЕ 2500 куб. см. ДО 3500 куб. см. включительно</string>
    <string name="title_button_more_3500_strahovka">с рабочим объемом двигателя СВЫШЕ 3500 куб. см</string>
    <string name="title_button_taxi">ТАКСИ</string>
    <string name="title_button_gibrid">ГИБРИДНЫЕ АВТОМОБИЛИ</string>
    <string name="title_button_electro_strahovka">ЭЛЕКТРОМОБИЛИ</string>
    <string name="title_button_legk_pricep_b1">ГРУЗОВЫЕ И СКЛАДНЫЕ ЖИЛЫЕ</string>
    <string name="title_button_legk_pricep_b2">ПРИЦЕПЫ - ДАЧА(КАРАВАН)</string>
    <string name="title_button_gruz_less_1_t_С0">грузоподъемностью ДО 1 т. включительно</string>
    <string name="title_button_gruz_in_1_t_2_t_С1">грузоподъемностью СВЫШЕ 1 т. ДО 2 т. включительно</string>
    <string name="title_button_gruz_in_2_t_8_t_С2">грузоподъемностью СВЫШЕ 2 т. ДО 8 т. включительно</string>
    <string name="title_button_days15">15 ДНЕЙ</string>
    <string name="title_button_month1">1 МЕСЯЦ</string>
    <string name="title_button_month2">2 МЕСЯЦА</string>
    <string name="title_button_month3">3 МЕСЯЦА</string>
    <string name="title_button_month4">4 МЕСЯЦА</string>
    <string name="title_button_month5">5 МЕСЯЦЕВ</string>
    <string name="title_button_month6">6 МЕСЯЦЕВ</string>
    <string name="title_button_month7">7 МЕСЯЦЕВ</string>
    <string name="title_button_month8">8 МЕСЯЦЕВ</string>
    <string name="title_button_month9">9 МЕСЯЦЕВ</string>
    <string name="title_button_month10">10 МЕСЯЦЕВ</string>
    <string name="title_button_month11">11 МЕСЯЦЕВ</string>
    <string name="title_button_month12">1 ГОД</string>
</resources>